# blackBox2

./: CMakeLists.txt  README.md  channel_proxy_impl.cpp  channel_proxy_impl.h  channel_stub_impl.cpp  channel_stub_impl.h  client.cpp  context.cpp  context.h  enet.cpp  enet.h  executor_proxy_impl.cpp  executor_proxy_impl.h  executor_stub_impl.cpp  executor_stub_impl.h  handle_proxy_impl.cpp  handle_proxy_impl.h  handle_stub_impl.cpp  handle_stub_impl.h  local_player.cpp  local_player.h  local_recorder.cpp  local_recorder.h  message_proxy_impl.h  message_stub_impl.h  node_proxy_impl.cpp  node_proxy_impl.h  node_stub_impl.cpp  node_stub_impl.h  object.h  pipe.h  pipe_posix.cpp  pipe_win32.cpp  process_proxy_impl.cpp  process_proxy_impl.h  protocol.cpp  protocol.h  protocol_message.pb.cc  protocol_message.pb.h  protocol_message.proto  (+3 more)
